fix scrollbar style

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,7 +4,7 @@
 
 /* width */
 ::-webkit-scrollbar {
-  width: 8smpx;
+  width: 8px;
 }
 /* Track */
 ::-webkit-scrollbar-track {
